--- a/index.html
+++ b/index.html
@@ -13,15 +13,26 @@
    <li>Ice cream</li>
 </ul>
 <h1>To do list</h1>
-<ul>
+<ol>
+    <li>Do the full website about favourite pieces of media</li>
     <li>Brush teeth</li>
     <li>Take out the trash</li>
     <li>Do the homework</li>
-</ul>
+</ol>
 <h1>Places to visit</h1>
-
-<h1>Favourite movies/games</h1>
-
+<ul>
+     <li>Crema,Italy</li>
+     <li>New York City,USA</li>
+     <li>Tokyo,Japan</li>
+</ul>
+<h1>Favourite pieces of media</h1>
+<ol>
+    <li>Come and see-Movie</li>
+    <li>Before your eyes-Video Game</li>
+    <li>Bojack Horseman-Netflix Series</li>
+    <li>The Bear-Series</li>
+    <li>Grace,Jeff Buckley-Music Album</li>
+</ol>
 
 </body>
 </hmtl>
